[gd_scene load_steps=10 format=3 uid="uid://bmsofjsvhxl02"]

[ext_resource type="Script" uid="uid://csngwsafdux26" path="res://src/unit/character/player/item/watermelon_seed.gd" id="2_dmb8m"]
[ext_resource type="Shader" uid="uid://bh7sfp6qvhqtb" path="res://src/asset/shader/outline.gdshader" id="3_3mdxo"]
[ext_resource type="Texture2D" uid="uid://3kyw2readtg2" path="res://asset/texture/unit/player/item/watermelon_seed.webp" id="3_hysi3"]
[ext_resource type="PackedScene" uid="uid://ctjmfotnke34v" path="res://src/unit/common/hitbox/hitbox.tscn" id="4_4a878"]
[ext_resource type="Script" uid="uid://cp8adijnorm6o" path="res://src/unit/common/particle/particle_queue.gd" id="5_0go7k"]
[ext_resource type="Material" uid="uid://dfhfhehyvj87i" path="res://src/asset/particle/seed_hit.tres" id="6_hysi3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nn2cq"]
shader = ExtResource("3_3mdxo")
shader_parameter/color = Color(1, 1, 1, 0.6)
shader_parameter/width = 0.2000000095
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="CircleShape2D" id="CircleShape2D_x3qbs"]
radius = 0.01

[sub_resource type="CircleShape2D" id="CircleShape2D_0go7k"]
radius = 3.0

[node name="WatermelonSeed" type="CharacterBody2D" groups=["watermelon_seed"]]
collision_layer = 16384
collision_mask = 66049
script = ExtResource("2_dmb8m")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_nn2cq")
position = Vector2(-2.98023e-08, 0)
scale = Vector2(0.625, 0.625)
texture = ExtResource("3_hysi3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x3qbs")

[node name="Hitbox" parent="." instance=ExtResource("4_4a878")]
collision_layer = 32
collision_mask = 1024
disabled = true
damage = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_0go7k")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-4.76837e-07, -4.76837e-07)
scale = Vector2(6.4, 6.4)

[node name="HitParticleQueue" type="Node" parent="."]
script = ExtResource("5_0go7k")
overwrite_color = Color(0.105882, 0.105882, 0.105882, 1)
metadata/_custom_type_script = "uid://cp8adijnorm6o"

[node name="GPUParticles2D" type="GPUParticles2D" parent="HitParticleQueue"]
emitting = false
amount = 10
lifetime = 0.3
one_shot = true
explosiveness = 1.0
process_material = ExtResource("6_hysi3")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="HitParticleQueue"]
emitting = false
amount = 10
lifetime = 0.3
one_shot = true
explosiveness = 1.0
process_material = ExtResource("6_hysi3")

[node name="GPUParticles2D3" type="GPUParticles2D" parent="HitParticleQueue"]
emitting = false
amount = 10
lifetime = 0.3
one_shot = true
explosiveness = 1.0
process_material = ExtResource("6_hysi3")

[node name="GPUParticles2D4" type="GPUParticles2D" parent="HitParticleQueue"]
emitting = false
amount = 10
lifetime = 0.3
one_shot = true
explosiveness = 1.0
process_material = ExtResource("6_hysi3")

[connection signal="collided" from="Hitbox" to="." method="_on_hitbox_collided"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
